# hermod-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TESTING.md  TODO.md  flake.nix
config/: hermod-tracer.yaml
examples/: mux_test.rs  simple_tracer.rs
perSystem/: devShells.nix  formatter.nix  packages.nix
src/: acceptor.rs  forwarder.rs  lib.rs  tracer.rs
src/dispatcher/: config.rs  traits.rs
src/dispatcher/backend/: datapoint.rs
src/mux/: acceptor_client.rs  client.rs  handshake.rs  mod.rs
src/protocol/: codec.rs  messages.rs  mod.rs  types.rs
src/server/: acceptor.rs  config.rs  datapoint.rs  ekg.rs  logging.rs  mod.rs  node.rs  prometheus.rs  reforwarder.rs  rotation.rs  trace_handler.rs
tests/: conformance.rs  forwarder_integration.rs  tracer_integration.rs
