[package]
name = "hermod"
version = "0.1.0"
edition = "2021"
authors = ["IOHK"]
description = "Rust tracer implementation of the Haskell hermod package"
license = "Apache-2.0"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Networking
futures = "0.3"
bytes = "1.7"
pallas-network = "0.35.0"
pallas-codec = "0.35.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Hostname
hostname = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "hermod"
path = "src/lib.rs"
