[package]
name = "hermod"
version = "1.0.0"
edition = "2021"
authors = ["Samuel Leathers <samuel.leathers@iohk.io>"]
description = "Rust tracer implementation of the Haskell hermod package"
license = "Apache-2.0"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Networking
pallas-network = "=1.0.0-alpha.5"
pallas-codec = "=1.0.0-alpha.5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Dispatcher
async-trait = "0.1"
serde_yaml = "0.9"
prometheus = { version = "0.13", features = ["process"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Hostname
hostname = "0.4"

# HTTP server (Prometheus endpoint)
axum = "0.7"
tower = "0.4"

# Ordered maps (TracerState node list)
indexmap = "2"

# Temp files for tests
[dev-dependencies]
tempfile = "3"

[lib]
name = "hermod"
path = "src/lib.rs"

[[bin]]
name = "hermod-acceptor"
path = "src/bin/hermod-acceptor.rs"

[[bin]]
name = "hermod-tracer"
path = "src/bin/hermod-tracer.rs"
